--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>SpoolTrack 이용약관</title>
+    <title>k. SpoolTrack 이용약관</title>
     <style>
         /* 기본 스타일 */
         body {
@@ -101,21 +101,21 @@
 <body>
 
     <header>
-        <h1>[SpoolTrack] 서비스 이용약관</h1>
+        <h1>[k. SpoolTrack] 서비스 이용약관</h1>
         <span class="date">시행일자: 2026년 2월 15일</span>
     </header>
 
     <div class="article">
         <span class="article-title">제1조 (목적)</span>
         <div class="article-content">
-            본 약관은 SpoolTrack 팀(이하 "회사"라 합니다)이 제공하는 3D 프린터 필라멘트 관리 모바일 애플리케이션 "SpoolTrack"(이하 "서비스"라 합니다)의 이용과 관련하여 회사와 이용자의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.
+            본 약관은 k. SpoolTrack 팀(이하 "회사"라 합니다)이 제공하는 3D 프린터 필라멘트 관리 모바일 애플리케이션 "k. SpoolTrack"(이하 "서비스"라 합니다)의 이용과 관련하여 회사와 이용자의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.
         </div>
     </div>
 
     <div class="article">
         <span class="article-title">제2조 (용어의 정의)</span>
         <div class="article-content">
-            1. "서비스"란 단말기(모바일, 태블릿 등)에 상관없이 이용자가 이용할 수 있는 "SpoolTrack" 및 관련 제반 서비스를 의미합니다.<br>
+            1. "서비스"란 단말기(모바일, 태블릿 등)에 상관없이 이용자가 이용할 수 있는 "k. SpoolTrack" 및 관련 제반 서비스를 의미합니다.<br>
             2. "이용자"란 "서비스"에 접속하여 본 약관에 따라 회사가 제공하는 서비스를 이용하는 자를 말합니다.
         </div>
     </div>
@@ -211,4 +211,5 @@
     </div>
 
 </body>
+
 </html>
