Fix HTML encoding issues in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -143,7 +143,7 @@
         <div class="article-content">
             개인정보와 관련된 문의사항은 아래 연락처로 문의해 주시기 바랍니다.
             <ul>
-                <li><strong>이메일:</strong> <a href="mailto:kspooltrack@gmail.com">kspooltrack@gmail.com</a></li>
+                <li><strong>이메일:</strong> <a href="mailto:help@kspooltracl.com">help@kspooltrack.com</a></li>
             </ul>
         </div>
     </div>
@@ -154,4 +154,5 @@
     </div>
 
 </body>
+
 </html>
