Update privacy policy in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -101,7 +101,7 @@
             앱은 서비스 제공을 위해 다음의 개인정보를 처리합니다.
             <ul>
                 <li><strong>Google 계정 정보:</strong> 앱 내 'Google 로그인' 기능을 이용할 때, 사용자의 식별을 위해 이메일 주소 및 프로필 정보를 Firebase Authentication을 통해 암호화된 형태로 처리합니다.</li>
-                <li><strong>카메라 데이터:</strong> QR 코드 스캔 및 필라멘트 인식을 위해 카메라 권한을 사용합니다. 이 데이터는 앱 내에서 실시간 처리를 위해서만 사용되며, 서버로 전송되거나 별도로 저장되지 않습니다.</li>
+                <li><strong>카메라 데이터:</strong> ai 필라멘트 인식을 위해 카메라 권한을 사용합니다. 이 데이터는 앱 내에서 실시간 처리를 위해서만 사용되며, 서버로 전송되거나 별도로 저장되지 않습니다.</li>
                 <li><strong>필라멘트 및 프린터 데이터:</strong> 사용자가 입력한 필라멘트 재고 및 프린터 설정 정보는 Google Firestore 데이터베이스에 안전하게 저장됩니다.</li>
             </ul>
         </div>
@@ -114,7 +114,7 @@
             <ul>
                 <li>사용자 본인 인증 및 데이터 동기화 (Google 계정 연동 시)</li>
                 <li>필라멘트 재고 관리 및 프린터 상태 모니터링 기능 제공</li>
-                <li>QR 코드 기반의 재고 인식 기능 제공</li>
+                <li>ai 기반의  인식 기능 제공</li>
             </ul>
         </div>
     </div>
@@ -156,3 +156,4 @@
 </body>
 
 </html>
+
