--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>K. Spooltrack 개인정보 처리방침</title>
     <style>
-        /* 기본 스타일 (이용약관과 동일) */
+        /* 기본 스타일 */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Pretendard", Roboto, "Noto Sans KR", sans-serif;
             line-height: 1.6;
@@ -53,7 +53,7 @@
             padding-left: 5px;
         }
 
-        /* 리스트 스타일 통합 */
+        /* 리스트 스타일 */
         .article-content ul, .article-content ol {
             padding-left: 20px;
             margin: 5px 0;
@@ -91,18 +91,19 @@
 
     <div class="article">
         <div class="article-content">
-            'K. Spooltrack'(이하 '앱')은 사용자의 개인정보를 소중히 다루며, 서비스 제공을 위해 다음과 같이 개인정보를 처리합니다.
+            ‘K. Spooltrack’(이하 ‘앱’)은 사용자의 개인정보를 보호하며, 관련 법령을 준수하여 최소한의 정보만을 처리합니다.
         </div>
     </div>
 
     <div class="article">
         <span class="article-title">1. 처리하는 개인정보 항목</span>
         <div class="article-content">
-            앱은 서비스 제공을 위해 다음의 개인정보를 처리합니다.
+            앱은 서비스 제공을 위해 다음의 정보를 처리할 수 있습니다.
             <ul>
-                <li><strong>Google 계정 정보:</strong> 앱 내 'Google 로그인' 기능을 이용할 때, 사용자의 식별을 위해 이메일 주소 및 프로필 정보를 Firebase Authentication을 통해 암호화된 형태로 처리합니다.</li>
-                <li><strong>카메라 데이터:</strong> ai 필라멘트 인식을 위해 카메라 권한을 사용합니다. 이 데이터는 앱 내에서 실시간 처리를 위해서만 사용되며, 서버로 전송되거나 별도로 저장되지 않습니다.</li>
-                <li><strong>필라멘트 및 프린터 데이터:</strong> 사용자가 입력한 필라멘트 재고 및 프린터 설정 정보는 Google Firestore 데이터베이스에 안전하게 저장됩니다.</li>
+                <li><strong>Google 계정 정보:</strong> Google 로그인 기능을 이용할 경우, 사용자의 이메일 주소 및 기본 프로필 정보가 Firebase Authentication을 통해 제공될 수 있습니다.</li>
+                <li><strong>카메라 정보:</strong> AI 기반 필라멘트 인식 기능 제공을 위해 카메라 권한을 사용합니다. 해당 영상 데이터는 앱 내에서 실시간으로 처리되며, 서버로 전송되거나 저장되지 않습니다.</li>
+                <li><strong>사용자 입력 데이터:</strong> 사용자가 직접 입력한 필라멘트 재고 정보 및 프린터 설정 정보는 Firebase Firestore에 저장됩니다.</li>
+                <li><strong>앱 사용 정보:</strong> 앱 품질 개선 및 오류 분석을 위해 익명화된 앱 사용 기록, 기기 정보, 오류 로그가 Firebase Analytics를 통해 수집될 수 있습니다.</li>
             </ul>
         </div>
     </div>
@@ -110,40 +111,41 @@
     <div class="article">
         <span class="article-title">2. 개인정보의 처리 목적</span>
         <div class="article-content">
-            앱은 수집한 정보를 다음의 목적을 위해서만 활용합니다.
+            수집된 정보는 다음의 목적에 한해 사용됩니다.
             <ul>
-                <li>사용자 본인 인증 및 데이터 동기화 (Google 계정 연동 시)</li>
-                <li>필라멘트 재고 관리 및 프린터 상태 모니터링 기능 제공</li>
-                <li>ai 기반의  인식 기능 제공</li>
+                <li>사용자 인증 및 기기 간 데이터 동기화</li>
+                <li>필라멘트 재고 관리 및 프린터 상태 관리 기능 제공</li>
+                <li>AI 기반 인식 기능 제공</li>
+                <li>서비스 품질 개선 및 오류 분석</li>
             </ul>
         </div>
     </div>
 
     <div class="article">
-        <span class="article-title">3. 제3자 제공 및 위탁</span>
+        <span class="article-title">3. 개인정보의 제3자 제공 및 위탁</span>
         <div class="article-content">
-            앱은 원활한 서비스 제공을 위해 다음의 외부 서비스를 이용합니다.
+            앱은 서비스 제공을 위해 다음의 외부 서비스를 이용합니다.
             <ul>
-                <li><strong>Google Firebase:</strong> 인증(Authentication), 데이터베이스(Firestore), 앱 분석(Analytics)</li>
-                <li><strong>Google AdMob (해당 시):</strong> 광고 게재</li>
+                <li><strong>Google Firebase:</strong> (Authentication, Firestore, Analytics)</li>
+                <li><strong>Google AdMob (광고 기능을 사용하는 경우):</strong> 광고 제공을 위해 일부 기기 정보 및 광고 식별자가 수집될 수 있습니다.</li>
             </ul>
         </div>
     </div>
 
     <div class="article">
-        <span class="article-title">4. 개인정보의 파기</span>
+        <span class="article-title">4. 개인정보의 보관 및 파기</span>
         <div class="article-content">
-            사용자가 앱 내 '계정 삭제' 기능을 이용하거나, 개발자에게 요청할 경우 사용자의 모든 데이터(계정 정보 및 저장된 재고 데이터)는 지체 없이 파기됩니다.<br>
-            단, 관계 법령에 의해 보존할 필요가 있는 경우 해당 기간 동안 보관될 수 있습니다.
+            사용자의 개인정보는 서비스 제공 기간 동안 보관되며, 사용자가 앱 내 ‘계정 삭제’ 기능을 이용하거나 개발자에게 삭제를 요청할 경우 지체 없이 파기됩니다.<br>
+            단, 관련 법령에 따라 보관이 필요한 경우 해당 법령에서 정한 기간 동안 보관될 수 있습니다.
         </div>
     </div>
 
     <div class="article">
         <span class="article-title">5. 개발자 연락처</span>
         <div class="article-content">
-            개인정보와 관련된 문의사항은 아래 연락처로 문의해 주시기 바랍니다.
+            개인정보 보호 관련 문의는 아래로 연락해 주시기 바랍니다.
             <ul>
-                <li><strong>이메일:</strong> <a href="mailto:help@kspooltracl.com">help@kspooltrack.com</a></li>
+                <li><strong>이메일:</strong> <a href="mailto:help@kspooltrack.com">help@kspooltrack.com</a></li>
             </ul>
         </div>
     </div>
@@ -154,6 +156,4 @@
     </div>
 
 </body>
-
 </html>
-
