--- a/terms.html
+++ b/terms.html
@@ -4,206 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>k. SpoolTrack 이용약관</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Pretendard", Roboto, "Noto Sans KR", sans-serif;
-            line-height: 1.6;
-            color: #333333;
-            margin: 0;
-            padding: 20px;
-            background-color: #ffffff;
-            word-break: keep-all;
-        }
-        header {
-            margin-bottom: 30px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 15px;
-        }
-        h1 {
-            font-size: 22px;
-            margin: 0 0 10px 0;
-            color: #000;
-        }
-        .date {
-            font-size: 14px;
-            color: #666;
-            text-align: right;
-            display: block;
-        }
-        .article {
-            margin-bottom: 25px;
-        }
-        .article-title {
-            font-size: 16px;
-            font-weight: bold;
-            color: #000;
-            margin-bottom: 8px;
-            display: block;
-        }
-        .article-content {
-            font-size: 14px;
-            color: #444;
-            padding-left: 5px;
-        }
-        .article-content ol {
-            padding-left: 20px;
-            margin: 5px 0;
-        }
-        .article-content li {
-            margin-bottom: 5px;
-        }
-        .highlight-box {
-            background-color: #f7f7f7;
-            border: 1px solid #e0e0e0;
-            border-left: 5px solid #555555;
-            border-radius: 4px;
-            padding: 15px;
-            margin-top: 10px;
-            margin-bottom: 15px;
-        }
-        .highlight-title {
-            font-weight: bold;
-            color: #333;
-            display: block;
-            margin-bottom: 8px;
-            font-size: 14px;
-        }
-        .backup-warning {
-            color: #444;
-            font-weight: 600;
-            text-decoration: underline;
-            text-underline-position: under;
-        }
-        .footer {
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid #ddd;
-            font-size: 14px;
-            color: #666;
-        }
-    </style>
 </head>
 <body>
 
-<header>
-    <h1>[k. SpoolTrack] 서비스 이용약관</h1>
-    <span class="date">시행일자: 2026년 2월 15일</span>
-</header>
+<h1>[k. SpoolTrack] 서비스 이용약관</h1>
+<p>시행일자: 2026년 2월 15일</p>
 
-<div class="article">
-    <span class="article-title">제1조 (목적)</span>
-    <div class="article-content">
-        본 약관은 개인 개발자가 운영하는 k. SpoolTrack(이하 "회사"라 합니다)이 제공하는
-        3D 프린터 필라멘트 관리 모바일 애플리케이션 "k. SpoolTrack"(이하 "서비스"라 합니다)의
-        이용과 관련하여 회사와 이용자의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.
-    </div>
-</div>
+<h2>제1조 (목적)</h2>
+<p>
+본 약관은 개인 개발자가 운영하는 k. SpoolTrack(이하 "회사")이 제공하는
+3D 프린터 필라멘트 관리 모바일 애플리케이션
+"k. SpoolTrack"(이하 "서비스")의 이용과 관련하여
+회사와 이용자의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.
+</p>
 
-<div class="article">
-    <span class="article-title">제2조 (용어의 정의)</span>
-    <div class="article-content">
-        1. "서비스"란 이용자가 모바일 단말기를 통해 이용할 수 있는 k. SpoolTrack 및 관련 기능을 의미합니다.<br>
-        2. "이용자"란 본 약관에 동의하고 회사가 제공하는 서비스를 이용하는 자를 말합니다.
-    </div>
-</div>
+<h2>제2조 (용어의 정의)</h2>
+<p>
+1. "서비스"란 이용자가 모바일 단말기를 통해 이용할 수 있는
+k. SpoolTrack 및 관련 기능을 의미합니다.<br>
+2. "이용자"란 본 약관에 동의하고 서비스를 이용하는 자를 말합니다.
+</p>
 
-<div class="article">
-    <span class="article-title">제3조 (약관의 명시와 개정)</span>
-    <div class="article-content">
-        1. 회사는 본 약관의 내용을 이용자가 쉽게 확인할 수 있도록 서비스 내 정보 화면에 게시합니다.<br>
-        2. 회사는 관련 법령을 위반하지 않는 범위에서 본 약관을 개정할 수 있습니다.<br>
-        3. 약관이 개정되는 경우, 회사는 적용일자 및 개정 사유를 서비스 내에 사전 공지합니다.
-    </div>
-</div>
+<h2>제3조 (약관의 명시와 개정)</h2>
+<p>
+회사는 본 약관의 내용을 서비스 내에서 이용자가 쉽게 확인할 수 있도록 게시합니다.
+</p>
 
-<div class="article">
-    <span class="article-title">제4조 (서비스의 제공)</span>
-    <div class="article-content">
-        1. 회사는 다음과 같은 서비스를 제공합니다.
-        <ol>
-            <li>3D 프린터 필라멘트 정보 관리 및 검색 기능</li>
-            <li>사용자 필라멘트 재고 등록 및 관리 기능</li>
-            <li>시각적 잔량 예측 기능(Visual Spool Estimator)</li>
-            <li>기타 회사가 제공하는 부가 기능</li>
-        </ol>
-        2. 본 서비스는 현재 무료로 제공되며, 향후 일부 기능에 대해 유료 서비스가 추가될 수 있습니다.
-    </div>
-</div>
+<h2>제4조 (서비스의 제공)</h2>
+<ol>
+    <li>3D 프린터 필라멘트 정보 관리 및 검색 기능</li>
+    <li>사용자 필라멘트 재고 등록 및 관리 기능</li>
+    <li>
+        시각적 잔량 예측 및 분석 기능
+        (사용자의 판단을 보조하기 위한 참고 정보 제공 목적)
+    </li>
+    <li>기타 회사가 제공하는 부가 기능</li>
+</ol>
 
-<div class="article">
-    <span class="article-title">제5조 (이용 계약의 성립 및 해지)</span>
-    <div class="article-content">
-        1. 이용 계약은 이용자가 본 약관에 동의하고 서비스를 이용함으로써 성립됩니다.<br>
-        2. 이용자는 언제든지 앱 내 ‘계정 삭제’ 기능을 통해 서비스 이용 계약을 해지할 수 있습니다.
-    </div>
-</div>
+<p>
+본 서비스는 3D 프린터 또는 기타 하드웨어를 직접 제어하지 않으며,
+이용자가 입력한 정보를 기록·관리하는 기능만을 제공합니다.
+</p>
 
-<div class="article">
-    <span class="article-title">제6조 (이용자의 의무)</span>
-    <div class="article-content">
-        이용자는 다음 행위를 하여서는 안 됩니다.
-        <ol>
-            <li>허위 정보 입력 또는 타인의 정보 도용</li>
-            <li>서비스 운영을 방해하는 행위</li>
-            <li>서비스 데이터를 무단으로 수집, 복제, 역설계하는 행위</li>
-            <li>관련 법령 또는 사회질서에 위반되는 행위</li>
-        </ol>
-    </div>
-</div>
+<h2>제5조 (이용 계약의 성립 및 해지)</h2>
+<p>
+이용 계약은 이용자가 본 약관에 동의하고 서비스를 이용함으로써 성립됩니다.
+이용자는 언제든지 앱 내 ‘계정 삭제’ 기능을 통해 이용 계약을 해지할 수 있습니다.
+</p>
 
-<div class="article">
-    <span class="article-title">제7조 (개인정보 보호)</span>
-    <div class="article-content">
-        회사는 이용자의 개인정보를 보호하며, 개인정보 처리에 관한 사항은
-        별도의 ‘개인정보 처리방침’에 따릅니다.
-    </div>
-</div>
+<h2>제6조 (이용자의 의무)</h2>
+<ul>
+    <li>허위 정보 입력 또는 타인의 정보 도용</li>
+    <li>서비스 운영을 방해하는 행위</li>
+    <li>서비스 데이터를 무단으로 수집, 복제, 역설계하는 행위</li>
+    <li>관련 법령 또는 사회질서에 위반되는 행위</li>
+</ul>
 
-<div class="article">
-    <span class="article-title">제8조 (지식재산권)</span>
-    <div class="article-content">
-        서비스 및 서비스 내 콘텐츠에 대한 저작권은 회사에 귀속되며,
-        이용자는 이를 무단으로 사용할 수 없습니다.
-    </div>
-</div>
+<h2>제7조 (개인정보 보호)</h2>
+<p>
+회사는 이용자의 개인정보를 보호하며,
+개인정보 처리에 관한 사항은 별도의 개인정보 처리방침에 따릅니다.
+</p>
 
-<div class="article">
-    <span class="article-title">제9조 (책임 제한)</span>
-    <div class="article-content">
-        <div class="highlight-box">
-            <span class="highlight-title">1. 필라멘트 잔량 예측 기능</span>
-            본 서비스가 제공하는 잔량 예측 정보는 참고용이며,
-            실제 잔량과의 정확한 일치를 보장하지 않습니다.
-        </div>
+<h2>제8조 (책임 제한)</h2>
+<p>
+본 서비스에서 제공되는 예측, 분석 및 추정 정보는 참고용이며,
+실제 출력 결과 또는 물리적 상태와의 정확한 일치를 보장하지 않습니다.
+</p>
+<p>
+회사는 데이터의 영구적인 보존을 보장하지 않으며,
+이용자는 중요한 데이터를 별도로 관리해야 합니다.
+</p>
 
-        <div class="highlight-box">
-            <span class="highlight-title">2. 데이터 백업</span>
-            <span class="backup-warning">
-            회사는 데이터의 영구적인 보존을 보장하지 않으며,
-            이용자는 회사가 제공하는 백업 수단 등을 활용하여
-            중요한 데이터를 별도로 관리해야 합니다.
-            </span>
-        </div>
+<h2>제9조 (준거법 및 관할)</h2>
+<p>
+본 약관은 대한민국 법을 따르며,
+서비스 이용과 관련한 분쟁은 관할 법원에 제기합니다.
+</p>
 
-        회사는 불가항력 또는 이용자의 귀책사유로 발생한 손해에 대해 책임을 지지 않습니다.
-    </div>
-</div>
+<p>
+문의 이메일: help@kspooltrack.com
+</p>
 
-<div class="article">
-    <span class="article-title">제10조 (준거법 및 관할)</span>
-    <div class="article-content">
-        본 약관은 대한민국 법을 따르며,
-        서비스 이용과 관련한 분쟁은 관할 법원에 제기합니다.
-    </div>
-</div>
-
-<div class="footer">
-    <strong>운영자 정보</strong><br>
-    개인 개발자 1인 운영<br>
-    문의 이메일: help@kspooltrack.com<br><br>
-    <strong>부칙</strong><br>
-    본 약관은 2026년 2월 15일부터 시행합니다.
-</div>
+<p>
+본 약관은 2026년 1월 30일부터 시행합니다.
+</p>
 
 </body>
 </html>
