--- a/privacy.html
+++ b/privacy.html
@@ -3,157 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>K. Spooltrack 개인정보 처리방침</title>
-    <style>
-        /* 기본 스타일 */
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Pretendard", Roboto, "Noto Sans KR", sans-serif;
-            line-height: 1.6;
-            color: #333333;
-            margin: 0;
-            padding: 20px;
-            background-color: #ffffff;
-            word-break: keep-all;
-        }
-
-        header {
-            margin-bottom: 30px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 15px;
-        }
-
-        h1 {
-            font-size: 22px;
-            margin: 0 0 10px 0;
-            color: #000;
-        }
-
-        .date {
-            font-size: 14px;
-            color: #666;
-            text-align: right;
-            display: block;
-        }
-
-        .article {
-            margin-bottom: 25px;
-        }
-
-        .article-title {
-            font-size: 16px;
-            font-weight: bold;
-            color: #000;
-            margin-bottom: 8px;
-            display: block;
-        }
-
-        .article-content {
-            font-size: 14px;
-            color: #444;
-            padding-left: 5px;
-        }
-
-        /* 리스트 스타일 */
-        .article-content ul, .article-content ol {
-            padding-left: 20px;
-            margin: 5px 0;
-        }
-
-        .article-content li {
-            margin-bottom: 8px;
-        }
-        
-        strong {
-            font-weight: 600;
-            color: #222;
-        }
-
-        a {
-            color: #333;
-            text-decoration: underline;
-        }
-
-        .footer {
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid #ddd;
-            font-size: 14px;
-            color: #666;
-        }
-    </style>
+    <title>K. SpoolTrack 개인정보 처리방침</title>
 </head>
 <body>
 
-    <header>
-        <h1>K. Spooltrack 개인정보 처리방침</h1>
-        <span class="date">시행일: 2026년 1월 9일</span>
-    </header>
+<h1>K. SpoolTrack 개인정보 처리방침</h1>
+<p>시행일: 2026년 1월 9일</p>
 
-    <div class="article">
-        <div class="article-content">
-            ‘K. Spooltrack’(이하 ‘앱’)은 사용자의 개인정보를 보호하며, 관련 법령을 준수하여 최소한의 정보만을 처리합니다.
-        </div>
-    </div>
+<p>
+‘K. SpoolTrack’(이하 ‘앱’)은 사용자의 개인정보를 보호하며,
+관련 법령을 준수하여 서비스 제공에 필요한 최소한의 정보만을 처리합니다.
+</p>
 
-    <div class="article">
-        <span class="article-title">1. 처리하는 개인정보 항목</span>
-        <div class="article-content">
-            앱은 서비스 제공을 위해 다음의 정보를 처리할 수 있습니다.
-            <ul>
-                <li><strong>Google 계정 정보:</strong> Google 로그인 기능을 이용할 경우, 사용자의 이메일 주소 및 기본 프로필 정보가 Firebase Authentication을 통해 제공될 수 있습니다.</li>
-                <li><strong>카메라 정보:</strong> AI 기반 필라멘트 인식 기능 제공을 위해 카메라 권한을 사용합니다. 해당 영상 데이터는 앱 내에서 실시간으로 처리되며, 서버로 전송되거나 저장되지 않습니다.</li>
-                <li><strong>사용자 입력 데이터:</strong> 사용자가 직접 입력한 필라멘트 재고 정보 및 프린터 설정 정보는 Firebase Firestore에 저장됩니다.</li>
-                <li><strong>앱 사용 정보:</strong> 앱 품질 개선 및 오류 분석을 위해 익명화된 앱 사용 기록, 기기 정보, 오류 로그가 Firebase Analytics를 통해 수집될 수 있습니다.</li>
-            </ul>
-        </div>
-    </div>
+<h2>1. 처리하는 개인정보 항목</h2>
+<ul>
+    <li>
+        <strong>Google 계정 정보:</strong>
+        Google 로그인 기능을 이용할 경우, 사용자의 이메일 주소 및 기본 프로필 정보가
+        Firebase Authentication을 통해 제공될 수 있습니다.
+    </li>
+    <li>
+        <strong>카메라 정보:</strong>
+        AI 기반 필라멘트 인식 기능 제공을 위해 카메라 권한을 사용할 수 있습니다.
+        촬영된 영상 또는 이미지는 앱 내에서 실시간으로 처리되며,
+        서버로 전송되거나 저장되지 않습니다.
+    </li>
+    <li>
+        <strong>사용자 입력 데이터:</strong>
+        사용자가 직접 입력한 필라멘트 재고 정보 및 프린터 관련 설정 정보는
+        Firebase Firestore에 저장됩니다.
+        해당 정보는 개인을 직접 식별할 수 있는 정보가 아닙니다.
+    </li>
+    <li>
+        <strong>앱 사용 정보:</strong>
+        서비스 품질 개선 및 오류 분석을 위해 익명화된 앱 사용 기록,
+        기기 정보 및 오류 로그가 Firebase Analytics를 통해 수집될 수 있습니다.
+    </li>
+</ul>
 
-    <div class="article">
-        <span class="article-title">2. 개인정보의 처리 목적</span>
-        <div class="article-content">
-            수집된 정보는 다음의 목적에 한해 사용됩니다.
-            <ul>
-                <li>사용자 인증 및 기기 간 데이터 동기화</li>
-                <li>필라멘트 재고 관리 및 프린터 상태 관리 기능 제공</li>
-                <li>AI 기반 인식 기능 제공</li>
-                <li>서비스 품질 개선 및 오류 분석</li>
-            </ul>
-        </div>
-    </div>
+<h2>2. 개인정보의 처리 목적</h2>
+<ul>
+    <li>사용자 인증 및 기기 간 데이터 동기화</li>
+    <li>필라멘트 재고 관리 및 프린터 상태 관리 기능 제공</li>
+    <li>AI 기반 인식 및 분석 기능 제공 (사용자의 판단을 보조하기 위한 참고 목적)</li>
+    <li>서비스 품질 개선 및 오류 분석</li>
+</ul>
 
-    <div class="article">
-        <span class="article-title">3. 개인정보의 제3자 제공 및 위탁</span>
-        <div class="article-content">
-            앱은 서비스 제공을 위해 다음의 외부 서비스를 이용합니다.
-            <ul>
-                <li><strong>Google Firebase:</strong> (Authentication, Firestore, Analytics)</li>
-                <li><strong>Google AdMob (광고 기능을 사용하는 경우):</strong> 광고 제공을 위해 일부 기기 정보 및 광고 식별자가 수집될 수 있습니다.</li>
-            </ul>
-        </div>
-    </div>
+<p>
+본 앱은 3D 프린터 또는 기타 하드웨어를 직접 제어하지 않으며,
+사용자가 입력한 정보를 기록·관리하는 기능만을 제공합니다.
+</p>
 
-    <div class="article">
-        <span class="article-title">4. 개인정보의 보관 및 파기</span>
-        <div class="article-content">
-            사용자의 개인정보는 서비스 제공 기간 동안 보관되며, 사용자가 앱 내 ‘계정 삭제’ 기능을 이용하거나 개발자에게 삭제를 요청할 경우 지체 없이 파기됩니다.<br>
-            단, 관련 법령에 따라 보관이 필요한 경우 해당 법령에서 정한 기간 동안 보관될 수 있습니다.
-        </div>
-    </div>
+<h2>3. 개인정보의 제3자 제공 및 처리 위탁</h2>
+<ul>
+    <li><strong>Google Firebase:</strong> Authentication, Firestore, Analytics</li>
+    <li>
+        <strong>Google AdMob (광고 기능 사용 시):</strong>
+        광고 제공을 위해 일부 기기 정보 및 광고 식별자가 수집될 수 있습니다.
+    </li>
+</ul>
 
-    <div class="article">
-        <span class="article-title">5. 개발자 연락처</span>
-        <div class="article-content">
-            개인정보 보호 관련 문의는 아래로 연락해 주시기 바랍니다.
-            <ul>
-                <li><strong>이메일:</strong> <a href="mailto:help@kspooltrack.com">help@kspooltrack.com</a></li>
-            </ul>
-        </div>
-    </div>
+<h2>4. 개인정보의 보관 및 파기</h2>
+<p>
+개인정보는 서비스 제공 기간 동안 보관되며,
+이용자가 앱 내 ‘계정 삭제’ 기능을 이용하거나
+개발자에게 삭제를 요청할 경우 지체 없이 파기됩니다.
+</p>
 
-    <div class="footer">
-        <strong>부칙</strong><br>
-        본 방침은 2026년 1월 9일부터 시행합니다.
-    </div>
+<h2>5. 개발자 연락처</h2>
+<p>
+이메일: <a href="mailto:help@kspooltrack.com">help@kspooltrack.com</a>
+</p>
+
+<p>
+본 방침은 2026년 1월 30일부터 시행됩니다.
+</p>
 
 </body>
 </html>
